@@ -14,3 +14,15 @@ dependencies {
     testImplementation(libs.assertk.core)
     testImplementation(libs.mockk)
 }
+
+/**
+ * See https://docs.gradle.org/current/userguide/upgrading_version_7.html#remove_test_add_opens .
+ *
+ * These options are added by default for Gradle plugin projects, however we have to mention them manually to support Java 17.
+ */
+tasks.withType(Test::class.java).configureEach {
+    jvmArgs(
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED"
+    )
+}
